Changes for 1.4.j:

 - fixed acknowledgements synchronization (Sasha)
 - fixed appeared error in Latest Data (Artem)
 - fixed problem with equivalence in expressions in Trigger Log Form (Artem)
 - fixed problem with displaying triggers which had been Acknowledged (Artem)
 - changed logical symbol between Expressions (Artem)
 - fixed adding specific symbols to Trigger expression in Trigger Log Form (Artem)
 - added Trigger Log Form (Artem)
 - fixed problem of displaying long Trigger description in js menu (Artem)
 - added JS menu for opening Trigger Log Form in Configuration->items (Artem)
 - fixed error apeared in Monitoring->Events (Artem)
 - fixed displaying "Array" instead of trigger description (Artem)
 - fixed redirection after acknowledge form (Artem) 
 - support ot two additional encodings (cp932, eucjpms) for log file monitoring (Alexei)
 - added synchronisation of last value and timestamp for DM (Alexei)
 - added support of encoding parameter for log[] and eventlog[] (Alexei)
 - fixed displaying of Japanese in the Latest Data (Alexei)
 - fixed maintenance of hosts (Alexei)
 - added support of remote agent control (Alexei)
 - support of storage of log files in UTF8 encoding (Alexei)
 - increased size of triggers.expression to 1023 (Alexei)

Changes for 1.4.3:

 - [ZBX-92] Distributed monitoring: overwriting new information (Sasha)
 - [DEV-42] Synchronisation of log files (Sasha)
 - [ZBX-90] fixed displaying of last line of a log file in the Latest Data and Overview (Alexei)
 - [ZBX-89] Unused fields:history_lastid, ..str_lastid & ..uint_lastid (Sasha)
 - [ZBX-88] Chenged method to "get" in all forms which affects display info (Artem)
 - [ZBX-80] Master node does not display configuration of slave nodes (Sasha)
 - [ZBX-67] Under DM, Synchronizing binary data between nodes for PostgresSQL (Sasha)
 - [ZBX-77] fixes for refreshing page in Monitoring (Artem)
 - [ZBX-75] fixed problem with occured warning in events (Artem)